src/compilador/grammar.java
/* grammar.java */
/* Generated By:JavaCC: Do not edit this line. grammar.java */
package compilador;

import java.util.Stack;
import java.util.HashMap;
import java.util.ArrayList;
import java.io.InputStream;
import java.io.FileNotFoundException;

public class grammar implements grammarConstants {
  public static Stack< HashMap< String, SimboloInfo>> tabelaSimbolos = new Stack< >();
  private static int nivelEscopo = 0;
  public static boolean declaracaoMain = false;

  static class SimboloInfo {
        String nome;
        String tipo;
        int escopo;
        boolean inicializada;

        SimboloInfo(String nome, String tipo, int escopo) {
                this.nome = nome;
                this.tipo = tipo;
                this.escopo = escopo;
                this.inicializada = false;

        }
  }

  private static void entrarEscopo() {
        tabelaSimbolos.push(new HashMap< >());
        nivelEscopo++;
  }

  private static void sairEscopo() {
        if(!tabelaSimbolos.isEmpty()) {
                tabelaSimbolos.pop();
                nivelEscopo--;
        }
  }

  private static void declararVariavel(String nome, String tipo) throws ParseException {

        if(!tabelaSimbolos.isEmpty() && tabelaSimbolos.peek().containsKey(nome)) {
                throw new Error("Identificador '" + nome +"' ja declarado neste escopo!");

        }

        SimboloInfo info = new SimboloInfo(nome, tipo, nivelEscopo);
        tabelaSimbolos.peek().put(nome, info);
        //System.out.println("Declarada: " + nome +" (tipo: "+ tipo + ", escopo: "+ nivelEscopo + ")");


  }

  private static void verificarVariavel(String nome) throws ParseException{
        for (int i= tabelaSimbolos.size() - 1; i >= 0; i--) {
                if(tabelaSimbolos.get(i).containsKey(nome)) {
                        return;
                }
        }
        throw new ParseException("Erro semantico: Variavel '" + nome + "' nao foi declarada!");
  }

  private static void verificarPropCarac(Token prop, Token car) throws ParseException {
    if(prop == null | car == null)
        return;

    String p = prop.image;
    String c = car.image;

        switch(p) {
                case "assin":
                        if(!(c.equals("main") || c.equals("while") || c.equals("for"))) {
                            throw new Error("A propriedade '"+ p + "' nao aceita o valor '"+ c + "'.");
                        }
                        if (c.equals("main")) {
                                if(declaracaoMain) {
                                        throw new Error("Erro semantico: A funcao com assinatura 'main' ja foi declarada.");
                                }
                                declaracaoMain = true;
                        }
                        break;
                case "tipo" :
                case "retorna" :
                        if (!(c.equals("inteiro") || c.equals("frac") || c.equals("booleano") || c.equals("car") || c.equals("nada"))) {
                                throw new Error("A propriedade '"+ p + "' nao aceita o valor '"+ c+ "'.");
                        } break;
                case "mut" :
                        if (!(c.equals("sim") || c.equals("nao") || c.equals("repetivel"))) {
                                throw new Error("A propriedade '"+ p + "' nao aceita o valor '"+ c+ "'.");
                        } break;

                default: break;
        }
  }



  public static void main(String args []) throws ParseException, FileNotFoundException
  {
    if(args.length < 1) {
                System.err.println("Erro: Forneca o caminho do arquivo .txt");
                System.err.println("Uso: java compilador.grammar < entrada.txt >");
                System.exit(1);
    }

    try {
                java.io.FileInputStream arquivo = new java.io.FileInputStream(args[0]);
        tabelaSimbolos.push(new HashMap< String, SimboloInfo >());

        grammar parser = new grammar(arquivo);
        System.out.println("Lendo arquivo: "+ args[0]);
        parser.inicio();
        System.out.println("Ok. Arquivo processado com sucesso.");

    } catch (FileNotFoundException e) {
        System.err.println("Erro: Arquivo nao encontrado.");
    } catch (ParseException e) {
        System.err.println("Erro sintatico: "+ e.getMessage());
    } catch (Error e ) {
                System.err.println("Erro semantico: "+ e.getMessage());
    }
  }

  static final public int inicio() throws ParseException, ParseException {
    label_1:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case ABREBLOCO:
      case ID:{
        ;
        break;
        }
      default:
        jj_la1[0] = jj_gen;
        break label_1;
      }
      declaracao();
    }
{if ("" != null) return 0;}
    throw new Error("Missing return statement in function");
}

  static final public Token verdadeiroOuFalso() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case VERDADEIRO:{
      jj_consume_token(VERDADEIRO);
{if ("" != null) return token;}
      break;
      }
    case FALSO:{
      jj_consume_token(FALSO);
{if ("" != null) return token;}
      break;
      }
    default:
      jj_la1[1] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
}

  static final public Token tipo() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case TIPO_INT:{
      jj_consume_token(TIPO_INT);
{if ("" != null) return token;}
      break;
      }
    case TIPO_CHAR:{
      jj_consume_token(TIPO_CHAR);
{if ("" != null) return token;}
      break;
      }
    case TIPO_FLOAT:{
      jj_consume_token(TIPO_FLOAT);
{if ("" != null) return token;}
      break;
      }
    default:
      jj_la1[2] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
}

  static final public Token escopo() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case VIS_GLOBAL:{
      jj_consume_token(VIS_GLOBAL);
{if ("" != null) return token;}
      break;
      }
    case VIS_LOOPS:{
      jj_consume_token(VIS_LOOPS);
{if ("" != null) return token;}
      break;
      }
    case ID:{
      jj_consume_token(ID);
{if ("" != null) return token;}
      break;
      }
    default:
      jj_la1[3] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
}

  static final public Token tipo_declaracao() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case DECLARAVAR:{
      jj_consume_token(DECLARAVAR);
{if ("" != null) return token;}
      break;
      }
    case DECLARAFUNC:{
      jj_consume_token(DECLARAFUNC);
{if ("" != null) return token;}
      break;
      }
    case DECLARA_DECLARA:{
      jj_consume_token(DECLARA_DECLARA);
{if ("" != null) return token;}
      break;
      }
    case LOOP_WHILE:{
      jj_consume_token(LOOP_WHILE);
{if ("" != null) return token;}
      break;
      }
    case LOOP_FOR:{
      jj_consume_token(LOOP_FOR);
{if ("" != null) return token;}
      break;
      }
    default:
      jj_la1[4] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
}

  static final public Token declaracao() throws ParseException, ParseException {Token nomeBloco = null;
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case ID:{
      nomeBloco = jj_consume_token(ID);
      break;
      }
    default:
      jj_la1[5] = jj_gen;
      ;
    }
    jj_consume_token(ABREBLOCO);
if( nomeBloco != null)
     {
       entrarEscopo();
     }else {
       entrarEscopo();
     }
    label_2:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case ABREPARENT:
      case DECLARAVAR:
      case DECLARAFUNC:
      case DECLARA_DECLARA:
      case LOOP_WHILE:
      case LOOP_FOR:
      case ID:
      case INTEIRO:
      case REAL:{
        ;
        break;
        }
      default:
        jj_la1[6] = jj_gen;
        break label_2;
      }
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case DECLARAVAR:
      case DECLARAFUNC:
      case DECLARA_DECLARA:
      case LOOP_WHILE:
      case LOOP_FOR:{
        declara();
        break;
        }
      default:
        jj_la1[7] = jj_gen;
        if (jj_2_1(2)) {
          chamada();
        } else {
          switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
          case ABREPARENT:
          case ID:
          case INTEIRO:
          case REAL:{
            expressao();
            break;
            }
          default:
            jj_la1[8] = jj_gen;
            jj_consume_token(-1);
            throw new ParseException();
          }
        }
      }
    }
    jj_consume_token(FECHABLOCO);
sairEscopo();
     {if ("" != null) return nomeBloco;}
    throw new Error("Missing return statement in function");
}

  static final public void declara() throws ParseException {Token nomeVar = null, prop = null, car = null;
        String tipoVar = "indefinido";
        boolean declarado = false;
    tipo_declaracao();
    jj_consume_token(DECLARADOR);
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case ID:{
      nomeVar = jj_consume_token(ID);
      break;
      }
    case ABREPARENT:{
      booleano();
      break;
      }
    default:
      jj_la1[9] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case ATRIBUICAO:{
      atribuicao();
      break;
      }
    default:
      jj_la1[10] = jj_gen;
      ;
    }
    label_3:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case SEPARADOR:{
        ;
        break;
        }
      default:
        jj_la1[11] = jj_gen;
        break label_3;
      }
      jj_consume_token(SEPARADOR);
      prop = propriedades();
      jj_consume_token(DECLARADOR);
      car = caracteristica();
verificarPropCarac(prop, car);
    }
    jj_consume_token(FIM);
if (nomeVar != null) {
      declararVariavel(nomeVar.image, tipoVar);
      }
}

  static final public void atribuicao() throws ParseException {
    jj_consume_token(ATRIBUICAO);
    expressao();
}

  static final public Token propriedades() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case PROP_TIPO:{
      jj_consume_token(PROP_TIPO);
{if ("" != null) return token;}
      break;
      }
    case PROP_MUTAVEL:{
      jj_consume_token(PROP_MUTAVEL);
{if ("" != null) return token;}
      break;
      }
    case PROP_RETORNA:{
      jj_consume_token(PROP_RETORNA);
{if ("" != null) return token;}
      break;
      }
    case PROP_ASSINATURA:{
      jj_consume_token(PROP_ASSINATURA);
{if ("" != null) return token;}
      break;
      }
    case PROP_ESCOPO:{
      jj_consume_token(PROP_ESCOPO);
{if ("" != null) return token;}
      break;
      }
    case PROP_PARAMETROS:{
      jj_consume_token(PROP_PARAMETROS);
{if ("" != null) return token;}
      break;
      }
    case PROP_CONDICAO:{
      jj_consume_token(PROP_CONDICAO);
{if ("" != null) return token;}
      break;
      }
    case PROP_ENTAO:{
      jj_consume_token(PROP_ENTAO);
{if ("" != null) return token;}
      break;
      }
    default:
      jj_la1[12] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
}

  static final public Token caracteristica() throws ParseException {Token t = null;
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case TIPO_INT:
    case TIPO_CHAR:
    case TIPO_FLOAT:{
      t = tipo();
{if ("" != null) return t;}
      break;
      }
    case VERDADEIRO:
    case FALSO:{
      t = verdadeiroOuFalso();
{if ("" != null) return t;}
      break;
      }
    case VAR_REPETIVEL:{
      t = jj_consume_token(VAR_REPETIVEL);
{if ("" != null) return t;}
      break;
      }
    default:
      jj_la1[13] = jj_gen;
      if (jj_2_2(2147483647)) {
        escopo();
{if ("" != null) return t;}
      } else {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case ABREBLOCO:
        case ID:{
          t = declaracao();
{if ("" != null) return t;}
          break;
          }
        case ASSIN_MAIN:
        case ASSIN_WHILE:
        case ASSIN_FOR:{
          t = assinatura();
{if ("" != null) return t;}
          break;
          }
        case ABREPARENT:{
          t = booleano();
{if ("" != null) return t;}
          break;
          }
        default:
          jj_la1[14] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
    }
    throw new Error("Missing return statement in function");
}

  static final public Token assinatura() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case ASSIN_MAIN:{
      jj_consume_token(ASSIN_MAIN);
{if ("" != null) return token;}
      break;
      }
    case ASSIN_WHILE:{
      jj_consume_token(ASSIN_WHILE);
{if ("" != null) return token;}
      break;
      }
    case ASSIN_FOR:{
      jj_consume_token(ASSIN_FOR);
{if ("" != null) return token;}
      break;
      }
    default:
      jj_la1[15] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
}

  static final public Token booleano() throws ParseException {Token t;
    t = jj_consume_token(ABREPARENT);
    expressao();
    operador_bool();
    expressao();
    label_4:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case AND:
      case OR:
      case MAIOR:
      case MENOR:
      case MAIOR_IGUAL:
      case MENOR_IGUAL:
      case IGUAL:{
        ;
        break;
        }
      default:
        jj_la1[16] = jj_gen;
        break label_4;
      }
      operador_bool();
      expressao();
    }
    jj_consume_token(FECHAPARENT);
{if ("" != null) return t;}
    throw new Error("Missing return statement in function");
}

  static final public Token operador_bool() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case IGUAL:{
      jj_consume_token(IGUAL);
{if ("" != null) return token;}
      break;
      }
    case MAIOR:{
      jj_consume_token(MAIOR);
{if ("" != null) return token;}
      break;
      }
    case MAIOR_IGUAL:{
      jj_consume_token(MAIOR_IGUAL);
{if ("" != null) return token;}
      break;
      }
    case MENOR:{
      jj_consume_token(MENOR);
{if ("" != null) return token;}
      break;
      }
    case MENOR_IGUAL:{
      jj_consume_token(MENOR_IGUAL);
{if ("" != null) return token;}
      break;
      }
    case OR:{
      jj_consume_token(OR);
{if ("" != null) return token;}
      break;
      }
    case AND:{
      jj_consume_token(AND);
{if ("" != null) return token;}
      break;
      }
    default:
      jj_la1[17] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
}

  static final public void expressao() throws ParseException {
    multiplicacao();
    label_5:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case MAIS:
      case MENOS:{
        ;
        break;
        }
      default:
        jj_la1[18] = jj_gen;
        break label_5;
      }
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case MAIS:{
        jj_consume_token(MAIS);
        break;
        }
      case MENOS:{
        jj_consume_token(MENOS);
        break;
        }
      default:
        jj_la1[19] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      multiplicacao();
    }
}

  static final public void multiplicacao() throws ParseException {
    fator();
    label_6:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case MULTIPLICA:
      case DIVIDE:{
        ;
        break;
        }
      default:
        jj_la1[20] = jj_gen;
        break label_6;
      }
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case MULTIPLICA:{
        jj_consume_token(MULTIPLICA);
        break;
        }
      case DIVIDE:{
        jj_consume_token(DIVIDE);
        break;
        }
      default:
        jj_la1[21] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      fator();
    }
}

  static final public void fator() throws ParseException, ParseException {Token id;
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case ID:{
      id = jj_consume_token(ID);
try {
                                verificarVariavel(id.image);
                        } catch (ParseException e) {
                                                {if (true) throw new Error(e.getMessage());}
                          }
      break;
      }
    case REAL:{
      jj_consume_token(REAL);
      break;
      }
    case INTEIRO:{
      jj_consume_token(INTEIRO);
      break;
      }
    case ABREPARENT:{
      jj_consume_token(ABREPARENT);
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case ABREPARENT:
      case ID:
      case INTEIRO:
      case REAL:{
        expressao();
        break;
        }
      case MENOS:{
        jj_consume_token(MENOS);
        fator();
        break;
        }
      default:
        jj_la1[22] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      jj_consume_token(FECHAPARENT);
      break;
      }
    default:
      jj_la1[23] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
}

  static final public void chamada() throws ParseException, ParseException {Token id;
    id = jj_consume_token(ID);
verificarVariavel(id.image);
    atribuicao();
    jj_consume_token(FIM);
}

  static private boolean jj_2_1(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_1()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(0, xla); }
  }

  static private boolean jj_2_2(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_2()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(1, xla); }
  }

  static private boolean jj_3R_atribuicao_293_3_8()
 {
    if (jj_scan_token(ATRIBUICAO)) return true;
    return false;
  }

  static private boolean jj_3_1()
 {
    if (jj_3R_chamada_382_3_7()) return true;
    return false;
  }

  static private boolean jj_3_2()
 {
    Token xsp;
    xsp = jj_scanpos;
    if (jj_scan_token(18)) {
    jj_scanpos = xsp;
    if (jj_scan_token(19)) return true;
    }
    return false;
  }

  static private boolean jj_3R_chamada_382_3_7()
 {
    if (jj_scan_token(ID)) return true;
    if (jj_3R_atribuicao_293_3_8()) return true;
    return false;
  }

  static private boolean jj_initialized_once = false;
  /** Generated Token Manager. */
  static public grammarTokenManager token_source;
  static SimpleCharStream jj_input_stream;
  /** Current token. */
  static public Token token;
  /** Next token. */
  static public Token jj_nt;
  static private int jj_ntk;
  static private Token jj_scanpos, jj_lastpos;
  static private int jj_la;
  static private int jj_gen;
  static final private int[] jj_la1 = new int[24];
  static private int[] jj_la1_0;
  static private int[] jj_la1_1;
  static {
	   jj_la1_init_0();
	   jj_la1_init_1();
	}
	private static void jj_la1_init_0() {
	   jj_la1_0 = new int[] {0x100000,0x0,0x0,0x0,0x7000000,0x0,0x7400000,0x7000000,0x400000,0x400000,0x20000,0x80000,0xf0000000,0x0,0x500000,0x0,0xfe00,0xfe00,0x60,0x60,0x180,0x180,0x400040,0x400000,};
	}
	private static void jj_la1_init_1() {
	   jj_la1_1 = new int[] {0x100000,0x600,0x70,0x102800,0xc0000,0x100000,0x7c0000,0xc0000,0x700000,0x100000,0x0,0x0,0xf,0x20670,0x11c000,0x1c000,0x0,0x0,0x0,0x0,0x0,0x0,0x700000,0x700000,};
	}
  static final private JJCalls[] jj_2_rtns = new JJCalls[2];
  static private boolean jj_rescan = false;
  static private int jj_gc = 0;

  /** Constructor with InputStream. */
  public grammar(java.io.InputStream stream) {
	  this(stream, null);
  }
  /** Constructor with InputStream and supplied encoding */
  public grammar(java.io.InputStream stream, String encoding) {
	 if (jj_initialized_once) {
	   System.out.println("ERROR: Second call to constructor of static parser.  ");
	   System.out.println("	   You must either use ReInit() or set the JavaCC option STATIC to false");
	   System.out.println("	   during parser generation.");
	   throw new Error();
	 }
	 jj_initialized_once = true;
	 try { jj_input_stream = new SimpleCharStream(stream, encoding, 1, 1); } catch(java.io.UnsupportedEncodingException e) { throw new RuntimeException(e); }
	 token_source = new grammarTokenManager(jj_input_stream);
	 token = new Token();
	 jj_ntk = -1;
	 jj_gen = 0;
	 for (int i = 0; i < 24; i++) jj_la1[i] = -1;
	 for (int i = 0; i < jj_2_rtns.length; i++) jj_2_rtns[i] = new JJCalls();
  }

  /** Reinitialise. */
  static public void ReInit(java.io.InputStream stream) {
	  ReInit(stream, null);
  }
  /** Reinitialise. */
  static public void ReInit(java.io.InputStream stream, String encoding) {
	 try { jj_input_stream.ReInit(stream, encoding, 1, 1); } catch(java.io.UnsupportedEncodingException e) { throw new RuntimeException(e); }
	 token_source.ReInit(jj_input_stream);
	 token = new Token();
	 jj_ntk = -1;
	 jj_gen = 0;
	 for (int i = 0; i < 24; i++) jj_la1[i] = -1;
	 for (int i = 0; i < jj_2_rtns.length; i++) jj_2_rtns[i] = new JJCalls();
  }

  /** Constructor. */
  public grammar(java.io.Reader stream) {
	 if (jj_initialized_once) {
	   System.out.println("ERROR: Second call to constructor of static parser. ");
	   System.out.println("	   You must either use ReInit() or set the JavaCC option STATIC to false");
	   System.out.println("	   during parser generation.");
	   throw new Error();
	 }
	 jj_initialized_once = true;
	 jj_input_stream = new SimpleCharStream(stream, 1, 1);
	 token_source = new grammarTokenManager(jj_input_stream);
	 token = new Token();
	 jj_ntk = -1;
	 jj_gen = 0;
	 for (int i = 0; i < 24; i++) jj_la1[i] = -1;
	 for (int i = 0; i < jj_2_rtns.length; i++) jj_2_rtns[i] = new JJCalls();
  }

  /** Reinitialise. */
  static public void ReInit(java.io.Reader stream) {
	if (jj_input_stream == null) {
	   jj_input_stream = new SimpleCharStream(stream, 1, 1);
	} else {
	   jj_input_stream.ReInit(stream, 1, 1);
	}
	if (token_source == null) {
 token_source = new grammarTokenManager(jj_input_stream);
	}

	 token_source.ReInit(jj_input_stream);
	 token = new Token();
	 jj_ntk = -1;
	 jj_gen = 0;
	 for (int i = 0; i < 24; i++) jj_la1[i] = -1;
	 for (int i = 0; i < jj_2_rtns.length; i++) jj_2_rtns[i] = new JJCalls();
  }
